# VCMSIS

./: .dockerignore  .gitignore  CMakeLists.txt  Makefile  README.md
targets/: CMakeLists.txt  Makefile  main.c
targets/TARGET_UNICOM/TARGET_VC/: CMakeLists.txt  analogin_api.c  critical_section_api.c  flash_api.c  gpio_api.c  hal_log.c  i2c_api.c  lp_ticker.c  lp_ticker_api.c  objects.h  pinmap.c  pinmap_ex.c  pinmap_ex.h  rtc_api.c  serial_api.c  sleep_api.c  spi_api.c  syscalls.c  us_ticker.c  watchdog_api.c
targets/TARGET_UNICOM/TARGET_VC/TARGET_VC6320/: CMakeLists.txt  PeripheralNames.h  PortNames.h  arm-none-eabi.cmake  device.h
targets/TARGET_UNICOM/TARGET_VC/TARGET_VC6320/CMSIS/: cmsis.h  system_vc6320.c  system_vc6320.h  vc6320.h
targets/TARGET_UNICOM/TARGET_VC/TARGET_VC6320/CMSIS/TOOLCHAIN_GCC_ARM/: gcc_arm_vc6320.ld  startup_vc6320.s
targets/TARGET_UNICOM/TARGET_VC/TARGET_VC6320/TARGET_VC6320_MTR/: PinNames.h
targets/TARGET_UNICOM/TARGET_VC/TARGET_VC6330/: CMakeLists.txt  PortNames.h  device.h
targets/TARGET_UNICOM/TARGET_VC/TARGET_VC6330/CMSIS/: cmsis.h  system_vc6330.c  system_vc6330.h  vc6330.h
targets/TARGET_UNICOM/TARGET_VC/TARGET_VC6330/CMSIS/TOOLCHAIN_GCC_ARM/: gcc_arm_vc6330.ld  startup_vc6330.s
targets/TARGET_UNICOM/TARGET_VC/TARGET_VC6330/TARGET_VC6330_EVB/: PinNames.h
targets/TARGET_UNICOM/TARGET_VC/TARGET_VC6330/TARGET_VC6330_FPGA/: PinNames.h
targets/TARGET_UNICOM/TARGET_VC/TARGET_VC7351/: CMakeLists.txt  PeripheralNames.h  PortNames.h  arm-none-eabi.cmake  device.h
targets/TARGET_UNICOM/TARGET_VC/TARGET_VC7351/CMSIS/: cmsis.h  system_vc7351.c  system_vc7351.h  vc7351.h
targets/TARGET_UNICOM/TARGET_VC/TARGET_VC7351/CMSIS/TOOLCHAIN_GCC_ARM/: gcc_arm_vc7351.ld
targets/TARGET_UNICOM/TARGET_VC/TARGET_VC7351/TARGET_VC7351_DK/: PinNames.h
targets/TARGET_UNICOM/TARGET_VC/device/: vc_ana.c  vc_ana.h  vc_flash.c  vc_flash.h  vc_gpio.c  vc_gpio.h  vc_i2c.c  vc_i2c.h  vc_mbox.c  vc_mbox.h  vc_misc.c  vc_misc.h  vc_radio.c  vc_radio.h  vc_rtc.c  vc_rtc.h  vc_spi.c  vc_spi.h  vc_uart.c  vc_uart.h  vc_usticker.c  vc_usticker.h  vc_wdt.c  vc_wdt.h  vc_xtimer.c  vc_xtimer.h
targets/TARGET_UNICOM/TARGET_VC/device/atcmd/: argpars.c  argpars.h  cli.c  cli.h  commands.c
targets/TARGET_UNICOM/TARGET_VC/device/crypto/osr_crypto/crypto_common/: eccp_curve.c  eccp_curve.h  utility.c  utility.h
targets/TARGET_UNICOM/TARGET_VC/device/crypto/osr_crypto/crypto_hal/: hash_basic.c  hash_basic.h  pke.c  pke.h  pke_common.c  pke_common.h  register_base_addr.h  ske_basic.c  ske_basic.h  trng.c  trng.h
targets/TARGET_UNICOM/TARGET_VC/device/crypto/osr_crypto/crypto_include/: trng.h  utility.h
targets/TARGET_UNICOM/TARGET_VC/device/crypto/osr_crypto/crypto_include/hash_hmac/: hash.h  hmac.h  hmac_sha1.h  hmac_sha256.h  hmac_sm3.h  sha1.h  sha256.h  sm3.h
targets/TARGET_UNICOM/TARGET_VC/device/crypto/osr_crypto/crypto_include/pke/: eccp_curve.h  ecdh.h  ecdsa.h  sm2.h
targets/TARGET_UNICOM/TARGET_VC/device/crypto/osr_crypto/crypto_include/ske/: ske.h  ske_cbc.h  ske_cfb.h  ske_ctr.h  ske_ecb.h  ske_gcm_gmac.h  ske_ofb.h
targets/TARGET_UNICOM/TARGET_VC/device/crypto/osr_crypto/crypto_lib/hash_hmac/: hash.c  hmac.c  hmac_sha1.c  hmac_sha256.c  hmac_sm3.c  (+3 more)
targets/TARGET_UNICOM/TARGET_VC/device/crypto/osr_crypto/crypto_test/: test.c  test.h
targets/TARGET_UNICOM/TARGET_VC/device/crypto/tests/hplc_crypto/: hplc_aes_cbc_test.c  hplc_sha256_test.c  hplc_sm3_test.c  hplc_sm4_test.c
targets/TARGET_UNICOM/TARGET_VC/device/lib/: vc_lib.c  vc_lib.h  wrap_malloc.c
targets/TARGET_UNICOM/TARGET_VC/device/plc/: vc_plc_bbp.h  vc_plc_flash_map.h  vc_plc_phy.c  vc_plc_phy.h
targets/TARGET_UNICOM/TARGET_VC/device/plc/bbp/: auto  compressed_size_z_data0  compressed_size_z_data1  magpie_bbp_sec_header  magpie_bbp_sec_map.txt  magpie_sec_idx0.bin.xz  magpie_sec_idx1.bin.xz  magpie_sec_idx2.bin.xz  magpie_sec_idx20.bin.xz  magpie_sec_idx3.bin.xz  magpie_sec_idx4.bin.xz  magpie_sec_idx5.bin.xz  split_img_darwin.sh  split_img_linux.sh
targets/TARGET_UNICOM/TARGET_VC/device/plc/bbp/infom/: cat_sec_map.txt  magpie_bbp_sec_map.txt  phoenix_dsp_dram0_tmp.bin_padding
targets/TARGET_UNICOM/TARGET_VC/device/plc/bplc/: hal_pmu.c  hal_pmu.h  magpie2.h  phy.c  phy.h  pll.c  pll.h  vc_bbp_drv.h  vc_lmac.h  vc_lmac_api.c  vc_lmac_dma.h  vc_lmac_dma_if.h  vc_lmac_init.c  vc_lmac_main.c  vc_lmac_rxh.c  vc_lmac_rxh.h  vc_lmac_txh.c  vc_lmac_txh.h  vc_string.h  vc_type.h
targets/TARGET_UNICOM/TARGET_VC/device/plc/dualmode/: hplc.c  hplc.h  hplc_bbp.c  hplc_bbp.h  hplc_dma.c  hplc_dma.h  hplc_lmac.h  hplc_pll.c  hplc_pll.h  hplc_rx.c  hplc_rx.h  hplc_tx.c  hplc_tx.h  phoenix.h  vc_lmac_dma.h  vc_lmac_dma_if.h
targets/TARGET_UNICOM/TARGET_VC/device/rf/: hal_gpio.c  hal_misc.c  hal_rf.c  rf_cfg.c  rf_cfg.h  rf_cmd.c  rf_cmd.h  rf_host.c  rf_host.h  rf_hwset.c  rf_hwset.h  rf_mac.c  rf_mac.h  rf_pmu_csr.h  rf_prober.c  rf_prober.h  rf_queue.h  rfmbx.c  rfmbx.h  totctl.c  totctl.h
targets/TARGET_UNICOM/TARGET_VC/device/rf/hal/: gpio.h  misc.h  rf.h
targets/TARGET_VERTEXCOM/TARGET_VC73/: gpio_api.c  objects.h  pinmap.c  pinmap_ex.c  pinmap_ex.h  serial_api.c  us_ticker.c
targets/TARGET_VERTEXCOM/TARGET_VC73/TARGET_VC7351/: PeripheralNames.h  PortNames.h
targets/TARGET_VERTEXCOM/TARGET_VC73/TARGET_VC7351/TARGET_VC7351_DK/: PinNames.h  device.h
targets/TARGET_VERTEXCOM/TARGET_VC73/TARGET_VC7351/TARGET_VC7351_DK/device/: cmsis_nvic.h  system_vc7351.c  system_vc7351.h  vc7351.h
targets/TARGET_VERTEXCOM/TARGET_VC73/device/: vc73xx_ana.c  vc73xx_ana.h  vc73xx_flash.c  vc73xx_flash.h  vc73xx_gpio.c  vc73xx_gpio.h  vc73xx_uart.c  vc73xx_uart.h  vc73xx_usticker.c  vc73xx_usticker.h  xtimer.c  xtimer.h
targets/TARGET_VERTEXCOM/TARGET_VC7351/CMSIS/Source/GCC/: gcc_arm_vc7351.ld
targets/tests/: basic.c  crypto.c  radio.c
targets/tests/hplc_crypto/: hplc_aes_gcm_test.c  hplc_ecc_test.c  hplc_sm2_test.c
targets/tests/osr_crypto/hash_hmac_test/: sample_test_hmac_sha256.c
targets/tests/osr_crypto/pke_test/: eccp_get_key_test.c
targets/tests/osr_crypto/ske_test/: ske_test.c
(+1155 files in other folders)
